--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
-<p>
-    test
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Xavier Rao</title>
+</head>
+<body>
+    <h1>
+        Coming Soon...
+    </h1>
+    <p style="font-size: larger;">
+        It's in the works
+    </p>
+</body>
+</html>
