--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xavier Rao</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>
@@ -12,5 +13,6 @@
     <p style="font-size: larger;">
         It's in the works
     </p>
+    <script src="blog.js"></script>
 </body>
 </html>
