--- a/index.html
+++ b/index.html
@@ -101,10 +101,13 @@
             <h2 class="h2">My Resume</h2>
             <div class="resume-card" data-aos="zoom-in">
                 <div class="resume-img">
-                    <img src="/img/.png" alt="My Resume">
+                    <img src="img/XavierRao_Resume.png" alt="My Resume">
                 </div>
                 <div class="download">
                     <!-- Download Button -->
+                    <a href="img/XavierRao_Resume.pdf" download="GFG" class="button-blue-outline mx-1">
+                        <i class="fa-solid fa-download"></i> Download
+                    </a>
                 </div>
             </div>
         </div>
