Will this fix the png error?

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <h2 class="h2">My Resume</h2>
             <div class="resume-card" data-aos="zoom-in">
                 <div class="resume-img">
-                    <img src="img/XavierRao_Resume.png" alt="My Resume">
+                    <img src="img/resume.png" alt="My Resume">
                 </div>
                 <div class="download">
                     <!-- Download Button -->
@@ -121,7 +121,7 @@
                 <div class="card" data-aos="fade-in">
                     <i class="fas fa-envelope"></i>
                     <h3>Email</h3>
-                    <p>xavierrao23@gmail.com</p>
+                    <p>xavierrao23+website@gmail.com</p>
                 </div>
                 <div class="card" data-aos="fade-in" data-aos-delay="100">
                     <i class="fab fa-github"></i>
