--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
     <!-- Header -->
     <header id="header">
         <nav id="nav" data-aos="fade-in">
-            <div class="container nav-bar">
+            <div class="nav-bar">
                 <ul class="nav-links">
+                    <li>
+                        <a href="#" class="link">
+                            <i class="fas fa-home"></i> Home
+                        </a>
+                    </li>
                     <li>
                         <a href="#projects" class="link">
                             <i class="fas fa-code"></i> Projects
@@ -36,7 +41,7 @@
                 </ul>
             </div>
         </nav>
-
+    
         <div class="hero">
             <div data-aos="fade-up">
                 <h1 class="h1">
@@ -105,7 +110,7 @@
                 </div>
                 <div class="download">
                     <!-- Download Button -->
-                    <a href="img/XavierRao_Resume.pdf" download="GFG" class="button-blue-outline mx-1">
+                    <a href="img/XavierRao_Resume.pdf" download class="button-blue-outline mx-1">
                         <i class="fa-solid fa-download"></i> Download
                     </a>
                 </div>
@@ -121,7 +126,7 @@
                 <div class="card" data-aos="fade-in">
                     <i class="fas fa-envelope"></i>
                     <h3>Email</h3>
-                    <p>xavierrao23+website@gmail.com</p>
+                    <a href="mailto:xavierrao23+website@gmail.com">xavierrao23@gmail.com</a>
                 </div>
                 <div class="card" data-aos="fade-in" data-aos-delay="100">
                     <i class="fab fa-github"></i>
@@ -131,16 +136,19 @@
                 <div class="card" data-aos="fade-in" data-aos-delay="200">
                     <i class="fab fa-linkedin"></i>
                     <h3>LinkedIn</h3>
-                    <a href="https://www.linkedin.com/in/xavier-rao/" target="_blank">xavier-rao</a>
+                    <a href="https://www.linkedin.com/in/xavierrao/" target="_blank">xavierrao</a>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- To Top of Page -->
-    <!-- <a id="backToTopButton" class="button-blue">
+    <a id="backToTopButton" class="button-to-top">
         <i class="fa fa-chevron-up"></i>
-    </a> -->
+    </a>
+
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <script src="portfolio.js"></script>
 
