--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="nav-bar">
                 <ul class="nav-links">
                     <li>
-                        <a href="#" class="link">
+                        <a href="#home" class="link active">
                             <i class="fas fa-home"></i> Home
                         </a>
                     </li>
@@ -41,106 +41,114 @@
                 </ul>
             </div>
         </nav>
-    
-        <div class="hero">
-            <div data-aos="fade-up">
-                <h1 class="h1">
-                    Xavier Rao
-                </h1>
-                <p class="p">
-                    Quick intro
-                </p>
-                <div class="hero-buttons">
-                    <a href="#projects" class="button-blue">
-                        <i class="fas fa-code"></i> Projects
-                    </a>
-                    <a href="https://github.com/xavierrao" class="button-blue-outline mx-1" id="projects-button" target="_blank">
-                        <i class="fab fa-github"></i> Github
-                    </a>
-                    <a href="#resume" class="button-blue">
-                        <i class="fas fa-file-alt"></i> Resume
-                    </a>
-                </div>
-            </div>
-        </div>
     </header>
 
-    <!-- Projects -->
-    <section id="projects" class="projects">
-        <div class="container">
-            <h2 class="h2">My Projects</h2>
-            <div class="project-row" data-aos="fade-up">
-                <div class="project-left">
-                    <h3>TypeSpeedrun</h3>
-                    <p>Description</p>
-                    <div class="project-links">
-                        <a href="https://www.github.com/xavierrao/typespeed" target="_blank" class="button-blue-outline button-small">
+    <main>
+        <section id="home" class="section home">
+            <div class="hero">
+                <div data-aos="fade-up">
+                    <h1 class="h1">
+                        Xavier Rao
+                    </h1>
+                    <p class="p">
+                        Quick intro
+                    </p>
+                    <div class="hero-buttons">
+                        <a href="#projects" class="button-white">
+                            <i class="fas fa-code"></i> Projects
+                        </a>
+                        <a href="https://github.com/xavierrao" class="button-dark mx-1" id="projects-button" target="_blank">
                             <i class="fab fa-github"></i> Github
+                        </a>
+                        <a href="#resume" class="button-white">
+                            <i class="fas fa-file-alt"></i> Resume
                         </a>
                     </div>
                 </div>
-                <div class="project-right">
-                    <img src="img/typespeed.png" alt="TypeSpeedrun Project">
+            </div>
+        </section>
+
+        <!-- Projects -->
+        <section id="projects" class="section projects">
+            <div class="container">
+                <h2 class="h2">My Projects</h2>
+                <div class="project-row" data-aos="fade-up">
+                    <div class="project-left">
+                        <h3>TypeSpeedrun</h3>
+                        <p>Description</p>
+                        <div class="project-links">
+                            <a href="https://www.github.com/xavierrao/typespeed" target="_blank" class="button-dark button-small">
+                                <i class="fab fa-github"></i> Github
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project-right">
+                        <img src="img/typespeed.png" alt="TypeSpeedrun Project">
+                    </div>
+                </div>
+                <div class="project-row" data-aos="fade-up">
+                    <div class="project-left">
+                        <h3>Cat Rescue</h3>
+                        <p>Description</p>
+                        <div class="project-links">
+                            <a href="https://www.github.com/xavierrao/" target="_blank" class="button-dark button-small">
+                                <i class="fab fa-github"></i> Github
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project-right">
+                        <img src="/img/.png" alt="Cat Rescue">
+                    </div>
                 </div>
             </div>
-            <div class="project-row" data-aos="fade-up">
-                <div class="project-left">
-                    <h3>Cat Rescue</h3>
-                    <p>Description</p>
-                    <div class="project-links">
-                        <a href="https://www.github.com/xavierrao/" target="_blank" class="button-blue-outline button-small">
-                            <i class="fab fa-github"></i> Github
+        </section>
+
+        <!-- Resume -->
+        <section id="resume" class="section resume">
+            <div class="container">
+                <h2 class="h2">My Resume</h2>
+                <div class="resume-card" data-aos="zoom-in">
+                    <div class="resume-img">
+                        <img src="img/resume.png" alt="My Resume">
+                    </div>
+                    <div class="download">
+                        <!-- Download Button -->
+                        <a href="img/XavierRao_Resume.pdf" download class="button-dark mx-1">
+                            <i class="fa-solid fa-download"></i> Download
                         </a>
                     </div>
                 </div>
-                <div class="project-right">
-                    <img src="/img/.png" alt="Cat Rescue">
-                </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Resume -->
-    <section id="resume" class="resume">
-        <div class="container">
-            <h2 class="h2">My Resume</h2>
-            <div class="resume-card" data-aos="zoom-in">
-                <div class="resume-img">
-                    <img src="img/resume.png" alt="My Resume">
-                </div>
-                <div class="download">
-                    <!-- Download Button -->
-                    <a href="img/XavierRao_Resume.pdf" download class="button-blue-outline mx-1">
-                        <i class="fa-solid fa-download"></i> Download
-                    </a>
+        <!-- Contact -->
+        <section id="contact" class="section contact">
+            <div class="container">
+                <h2 class="h2">Contact Me</h2>
+                <div class="contact-cards">
+                    <div class="card" data-aos="fade-in">
+                        <i class="fas fa-envelope"></i>
+                        <h3>Email</h3>
+                        <a href="mailto:xavierrao23+website@gmail.com">xavierrao23@gmail.com</a>
+                    </div>
+                    <div class="card" data-aos="fade-in" data-aos-delay="100">
+                        <i class="fab fa-github"></i>
+                        <h3>GitHub</h3>
+                        <a href="https://github.com/xavierrao" target="_blank">xavierrao</a>
+                    </div>
+                    <div class="card" data-aos="fade-in" data-aos-delay="200">
+                        <i class="fab fa-linkedin"></i>
+                        <h3>LinkedIn</h3>
+                        <a href="https://www.linkedin.com/in/xavierrao/" target="_blank">xavierrao</a>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
-    <!-- Contact -->
-    <section id="contact" class="contact">
-        <div class="container">
-            <h2 class="h2">Contact Me</h2>
-            <div class="contact-cards">
-                <div class="card" data-aos="fade-in">
-                    <i class="fas fa-envelope"></i>
-                    <h3>Email</h3>
-                    <a href="mailto:xavierrao23+website@gmail.com">xavierrao23@gmail.com</a>
-                </div>
-                <div class="card" data-aos="fade-in" data-aos-delay="100">
-                    <i class="fab fa-github"></i>
-                    <h3>GitHub</h3>
-                    <a href="https://github.com/xavierrao" target="_blank">xavierrao</a>
-                </div>
-                <div class="card" data-aos="fade-in" data-aos-delay="200">
-                    <i class="fab fa-linkedin"></i>
-                    <h3>LinkedIn</h3>
-                    <a href="https://www.linkedin.com/in/xavierrao/" target="_blank">xavierrao</a>
-                </div>
-            </div>
-        </div>
-    </section>
+    <footer id="footer" class="footer">
+        <p>Copyright © 2025 Xavier Rao</p>
+    </footer>
 
     <!-- To Top of Page -->
     <a id="backToTopButton" class="button-to-top">
