Better Spacing + Footer

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
                 <h2 class="h2">My Projects</h2>
                 <div class="project-row" data-aos="fade-up">
                     <div class="project-left">
-                        <h3>TypeSpeedrun</h3>
+                        <a href="https://typespeedrun.xavierrao.com/" target="_blank">
+                            <h3>TypeSpeedrun</h3>
+                        </a>
                         <p>Description</p>
                         <div class="project-links">
                             <a href="https://www.github.com/xavierrao/typespeed" target="_blank" class="button-dark button-small">
@@ -91,13 +93,13 @@
                         <h3>Cat Rescue</h3>
                         <p>Description</p>
                         <div class="project-links">
-                            <a href="https://www.github.com/xavierrao/" target="_blank" class="button-dark button-small">
+                            <a href="https://www.github.com/xavierrao/cat_rescue" target="_blank" class="button-dark button-small">
                                 <i class="fab fa-github"></i> Github
                             </a>
                         </div>
                     </div>
                     <div class="project-right">
-                        <img src="/img/.png" alt="Cat Rescue">
+                        <img src="img/catrescue.png" alt="Cat Rescue">
                     </div>
                 </div>
             </div>
