--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Xavier Rao</title>
     <link rel="stylesheet" href="styles.css">
 
+    <!-- Coding Languge Icons -->
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+
     <!-- Fade In Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -72,36 +75,92 @@
         <section id="projects" class="section projects">
             <div class="container">
                 <h2 class="h2">My Projects</h2>
-                <div class="project-row" data-aos="fade-up">
-                    <div class="project-left">
-                        <a href="https://typespeedrun.xavierrao.com/" target="_blank">
-                            <h3>TypeSpeedrun</h3>
-                        </a>
-                        <p>Description</p>
-                        <div class="project-links">
-                            <a href="https://www.github.com/xavierrao/typespeed" target="_blank" class="button-dark button-small">
-                                <i class="fab fa-github"></i> Github
-                            </a>
+                <ul>
+                    <li>
+                        <div class="project-row" data-aos="fade-up">
+                            <div class="project-left">
+                                <h3>TypeSpeedrun</h3>
+                                <p>
+                                    An interactive typing game that challenges users to improve their typing speed and accuracy. Choose between different modes, such as timed tests, word counts, or quotes of varying lengths. Track your words per minute (WPM) and accuracy as you type!
+                                </p>
+                                <br>
+                                <div class="madeWith">
+                                    <p style="font-size: 16px; color: rgb(107 114 128)">
+                                        Made with:
+                                    </p>
+                                    <i class="devicon-html5-plain-wordmark colored"></i>
+                                    <i class="devicon-css3-plain-wordmark colored"></i>
+                                    <i class="devicon-javascript-plain colored"></i>   
+                                </div>                     
+                                <div class="project-links">
+                                    <a href="https://www.github.com/xavierrao/typespeed" target="_blank" class="button-dark button-small">
+                                        <i class="fab fa-github"></i> Github
+                                    </a>
+                                    <a href="https://typespeedrun.xavierrao.com/" target="_blank" class="button-dark button-small">
+                                        <i class="fas fa-external-link-alt"></i> Live
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="project-right">
+                                <img src="img/typespeed.png" alt="TypeSpeedrun Project">
+                            </div>
                         </div>
-                    </div>
-                    <div class="project-right">
-                        <img src="img/typespeed.png" alt="TypeSpeedrun Project">
-                    </div>
-                </div>
-                <div class="project-row" data-aos="fade-up">
-                    <div class="project-left">
-                        <h3>Cat Rescue</h3>
-                        <p>Description</p>
-                        <div class="project-links">
-                            <a href="https://www.github.com/xavierrao/cat_rescue" target="_blank" class="button-dark button-small">
-                                <i class="fab fa-github"></i> Github
-                            </a>
+                    </li>
+                    <li>
+                        <div class="project-row" data-aos="fade-up">
+                            <div class="project-left">
+                                <h3>Infinite Tic Tac Toe</h3>
+                                <p>
+                                    Like Tic-Tac-Toe, you have to place 3 of your mark in a line, whether it be horizontal, vertical, or diagonal. Unlike Tic-Tac-Toe, you can only have 3 marks on the grid at a time. This means that when you place your 4th mark, your 1st mark disappears and so on. You cannot place your 4th mark in the same space as your 1st mark. After each player has placed 3 marks, one mark will turn red to indicate that it is the one to disappear. That will happen until the game ends.
+                                </p>
+                                <br>
+                                <div class="madeWith">
+                                    <p style="font-size: 16px; color: rgb(107 114 128)">
+                                        Made with:
+                                    </p>
+                                    <i class="devicon-java-plain-wordmark colored"></i>
+                                </div>
+                                <div class="project-links">
+                                    <a href="https://www.github.com/xavierrao/infiniteTicTacToe" target="_blank" class="button-dark button-small">
+                                        <i class="fab fa-github"></i> Github
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="project-right">
+                                <img src="img/infinitetictactoe.png" alt="Infinite Tic Tac Toe">
+                            </div>
                         </div>
-                    </div>
-                    <div class="project-right">
-                        <img src="img/catrescue.png" alt="Cat Rescue">
-                    </div>
-                </div>
+                    </li>
+                    <li>
+                        <div class="project-row" data-aos="fade-up">
+                            <div class="project-left">
+                                <h3>Cat Rescue</h3>
+                                <p>
+                                    Description
+                                </p>
+                                <br>
+                                <div class="madeWith">
+                                    <p style="font-size: 16px; color: rgb(107 114 128)">
+                                        Made with:
+                                    </p>
+                                    <i class="devicon-angularjs-plain colored"></i>
+                                    <i class="devicon-java-plain-wordmark colored"></i>
+                                    <i class="devicon-html5-plain-wordmark colored"></i>
+                                    <i class="devicon-css3-plain-wordmark colored"></i>
+                                    <i class="devicon-typescript-plain colored"></i>
+                                </div>
+                                <div class="project-links">
+                                    <a href="https://www.github.com/xavierrao/cat_rescue" target="_blank" class="button-dark button-small">
+                                        <i class="fab fa-github"></i> Github
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="project-right">
+                                <img src="img/catrescue.png" alt="Cat Rescue">
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
 
