--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
             </div>
         </nav>
     </header>
-
     <main>
         <section id="home" class="section home">
             <div class="hero">
@@ -54,7 +53,8 @@
                         Xavier Rao
                     </h1>
                     <p class="p">
-                        Quick intro
+                        I'm currently a second year student at RIT pursuing a BS in Software Engineering and an MS in Cybersecurity.
+                        I'm currently seeking a Fall 2025 co-op using Java or in Web Development.
                     </p>
                     <div class="hero-buttons">
                         <a href="#projects" class="button-white">
@@ -70,7 +70,6 @@
                 </div>
             </div>
         </section>
-
         <!-- Projects -->
         <section id="projects" class="section projects">
             <div class="container">
@@ -80,23 +79,24 @@
                         <div class="project-row" data-aos="fade-up">
                             <div class="project-left">
                                 <h3>TypeSpeedrun</h3>
+                                <br>
                                 <p>
                                     An interactive typing game that challenges users to improve their typing speed and accuracy. Choose between different modes, such as timed tests, word counts, or quotes of varying lengths. Track your words per minute (WPM) and accuracy as you type!
                                 </p>
                                 <br>
                                 <div class="madeWith">
-                                    <p style="font-size: 16px; color: rgb(107 114 128)">
+                                    <p>
                                         Made with:
                                     </p>
                                     <i class="devicon-html5-plain-wordmark colored"></i>
                                     <i class="devicon-css3-plain-wordmark colored"></i>
-                                    <i class="devicon-javascript-plain colored"></i>   
+                                    <i class="devicon-javascript-plain colored" style="background-color: black;"></i>   
                                 </div>                     
                                 <div class="project-links">
                                     <a href="https://www.github.com/xavierrao/typespeed" target="_blank" class="button-dark button-small">
                                         <i class="fab fa-github"></i> Github
                                     </a>
-                                    <a href="https://typespeedrun.xavierrao.com/" target="_blank" class="button-dark button-small">
+                                    <a href="https://typespeedrun.xavierrao.com/" target="_blank" class="button-white button-small">
                                         <i class="fas fa-external-link-alt"></i> Live
                                     </a>
                                 </div>
@@ -110,12 +110,13 @@
                         <div class="project-row" data-aos="fade-up">
                             <div class="project-left">
                                 <h3>Infinite Tic Tac Toe</h3>
+                                <br>
                                 <p>
-                                    Like Tic-Tac-Toe, you have to place 3 of your mark in a line, whether it be horizontal, vertical, or diagonal. Unlike Tic-Tac-Toe, you can only have 3 marks on the grid at a time. This means that when you place your 4th mark, your 1st mark disappears and so on. You cannot place your 4th mark in the same space as your 1st mark. After each player has placed 3 marks, one mark will turn red to indicate that it is the one to disappear. That will happen until the game ends.
+                                    In this game, like Tic-Tac-Toe, you need to get 3 marks in a line (horizontally, vertically, or diagonally). However, you can only have 3 marks on the grid at a time. When you place your 4th mark, your 1st mark disappears, and so on. You can't place your 4th mark where your 1st mark was. After each player has placed 3 marks, one mark will turn red to show it will disappear. This continues until the game ends.
                                 </p>
                                 <br>
                                 <div class="madeWith">
-                                    <p style="font-size: 16px; color: rgb(107 114 128)">
+                                    <p>
                                         Made with:
                                     </p>
                                     <i class="devicon-java-plain-wordmark colored"></i>
@@ -135,12 +136,13 @@
                         <div class="project-row" data-aos="fade-up">
                             <div class="project-left">
                                 <h3>Cat Rescue</h3>
+                                <br>
                                 <p>
                                     Description
                                 </p>
                                 <br>
                                 <div class="madeWith">
-                                    <p style="font-size: 16px; color: rgb(107 114 128)">
+                                    <p>
                                         Made with:
                                     </p>
                                     <i class="devicon-angularjs-plain colored"></i>
@@ -163,7 +165,6 @@
                 </ul>
             </div>
         </section>
-
         <!-- Resume -->
         <section id="resume" class="section resume">
             <div class="container">
@@ -181,7 +182,6 @@
                 </div>
             </div>
         </section>
-
         <!-- Contact -->
         <section id="contact" class="section contact">
             <div class="container">
