Cat rescue description

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                 <h3>Cat Rescue</h3>
                                 <br>
                                 <p>
-                                    Description
+                                    A charity website for abandoned cats in the Rochester area. Here, you're able to help fund food, toys, and various other supplies. If you're unsure about what to fund, you can look at the statistics page to see how many of each item has been funded. After you add items to your basket and checkout, your order will be processed. If you're an admin, you can log in to add or update these items, as well as send out notifications to all the users.
                                 </p>
                                 <br>
                                 <div class="madeWith">
