Add summer to co-op seeking timeframe

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </h1>
                     <p class="p">
                         I'm currently a second year student at RIT pursuing a BS in Software Engineering and an MS in Cybersecurity.
-                        I'm currently seeking a Fall 2025 co-op using Java or in Web Development.
+                        I'm currently seeking a Summer/Fall 2025 co-op using Java or in Web Development.
                     </p>
                     <div class="hero-buttons">
                         <a href="#projects" class="button-white">
