--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                         Xavier Rao
                     </h1>
                     <p class="p">
-                        I'm currently a second year student at RIT pursuing a BS in Software Engineering and an MS in Cybersecurity.
-                        I'm currently seeking a Summer/Fall 2025 co-op using Java or in Web Development.
+                        I'm currently a third year student at RIT pursuing a BS in Software Engineering.
+                        I'm currently seeking a Spring or Sping/Summer 2026 co-op.
                     </p>
                     <div class="hero-buttons">
                         <a href="#projects" class="button-white">
