--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 <h3>Most Likely To Game</h3>
                                 <br>
                                 <p>
-                                    Everyone gets a question. Is your question the same as everyone else or are you the imposter? Vote to answer your question and see how everyone else voted. Discuss and try to find who the imposter is.
+                                    Everyone gets a question. Is your question the same as everyone else or are you the imposter? Vote to answer your question. Once everyone votes, you get to see how everyone else voted and what the main question was. Discuss and try to find who the imposter is.
                                 </p>
                                 <br>
                                 <div class="madeWith">
