--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                                     <i class="devicon-css3-plain-wordmark colored"></i>
                                     <i class="devicon-javascript-plain colored" style="background-color: black;"></i>
                                     <i class="devicon-nodejs-plain colored"></i>
+                                    <i class="devicon-react-original"></i>
                                     <i class="devicon-socketio-original"></i>
                                     <i class="devicon-axios-plain colored"></i>
                                 </div>                     
