--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
                                     <a href="https://github.com/xavierrao/mostLikelyTo" target="_blank" class="button-dark button-small">
                                         <i class="fab fa-github"></i> Github
                                     </a>
+                                    <a href="https://mostlikelyto.xavierrao.com/" target="_blank" class="button-white button-small">
+                                        <i class="fas fa-external-link-alt"></i> Live
+                                    </a>
                                 </div>
                             </div>
                             <div class="project-right">
